apps/production/confluent-control-center/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
    k8s.apisix.apache.org/upstream-scheme: http
  name: control-center
  namespace: confluent
spec:
  ingressClassName: apisix
  rules:
    - host: control-center.apps.lab.okd.local
      http:
        paths:
          - backend:
              service:
                name: control-center
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - control-center.apps.lab.okd.local
      secretName: control-center-ingress-tls
