apps/production/confluent-control-center/clusterpolicy-add-mnt-volume-keystores-control-center-confluent.yaml

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-mnt-volume-keystores-control-center-confluent
  annotations:
    policies.kyverno.io/title: Add Certificates as a Volume
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod,Volume
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.21"
    policies.kyverno.io/minversion: 1.5.0
    pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,Job,StatefulSet
    policies.kyverno.io/description: >-
      In some cases you would need to trust custom CA certificates for all the containers of a Pod.
      It makes sense to be in a ConfigMap so that you can automount them by only setting an annotation.
      This policy adds a volume to all containers in a Pod containing the certificate if the annotation
      called `inject-certs` with value `enabled` is found.      
spec:
  background: false
  mutateExistingOnPolicyUpdate: false
  rules:
  - name: mount-volume-cert-manager
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - confluent
          names:
          - control-center-*
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: control-center
            volumeMounts:
            - name: mnt-cert-manager-example-com-tls
              mountPath: /mnt/cert-manager/example-com
            - name: mnt-cert-manager-control-center-tls-keystore
              mountPath: /mnt/cert-manager/control-center/keystore.jks
              subPath: keystore.jks
            - name: mnt-cert-manager-control-center-tls-truststore
              mountPath: /mnt/cert-manager/control-center/truststore.jks
              subPath: truststore.jks
          volumes:
          - name: mnt-cert-manager-example-com-tls
            secret:
              secretName: example-com-tls
          - name: mnt-cert-manager-control-center-tls-keystore
            secret:
              secretName: control-center-tls
              items:
                - key: keystore.jks
                  path: keystore.jks
          - name: mnt-cert-manager-control-center-tls-truststore
            configMap:
              name: confluent-ca-bundle
              items:
                - key: bundle.jks
                  path: truststore.jks


# https://medium.com/@phanindra.sangers/kubernetes-mountpath-vs-subpath-012c3530154a
